<resources>
    <string name="app_name">KEEWITZ</string>

    <string name="default_username">My username</string>

    <!-- HOME MENU -->
    <string name="home_page_map">Map</string>
    <string name="home_page_map_desc">Retrieve points of interests</string>
    <string name="home_page_timetable">Timetable</string>
    <string name="home_page_timetable_desc">Timetable of your courses</string>
    <string name="home_page_settings">Settings</string>
    <string name="home_page_settings_desc">Settings of the app</string>
    <string name="home_page_qrcode">QR Code</string>
    <string name="home_page_qrcode_desc">Scan a QR to retrieve your documents</string>
    <string name="home_page_infos">Informations</string>
    <string name="home_page_infos_desc">Authors informations, luminosity and noise level</string>

    <!-- REPORT ANOMALY -->
    <string name="criticity_prompt">Chose a criticity level</string>
    <string-array name="criticity_array">
        <item>Comfort</item>
        <item>Danger</item>
        <item>Problem</item>
    </string-array>

    <!-- TIME TABLE -->
    <string name="title_time_table">My agenda</string>
    <string name="timetable_url_m2dl">https://edt.univ-tlse3.fr/FSI/2017_2018/M2/M2_INF_DL/g251745.html</string>
    <string name="timetable_url_m1dl">https://edt.univ-tlse3.fr/FSI/2017_2018/M1/M1_INF_DL/g241675.html</string>
    <string name="timetable_url_l3info">https://edt.univ-tlse3.fr/FSI/2017_2018/L3/L3_Info/g235934.html</string>
    <string-array name="formation">
        <item>M2 DL</item>
        <item>M1 DL</item>
        <item>L3 info</item>
    </string-array>
    <string name="timetableUrl">timetableUrl</string>

    <!-- MENU -->
    <string name="search">Search</string>
    <string name="search_hint">Search a point of interest</string>

    <!-- MAP -->
    <!-- Dialog box to save point of interest -->
    <string name="dialog_title">Save as point of interest ?</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="help">Tap on the map to set save new point of interest</string>
</resources>
